--- a/inmobiliaria/src/components/cuadradito/cuadradito.css
+++ b/inmobiliaria/src/components/cuadradito/cuadradito.css
@@ -2,11 +2,26 @@
     margin: 5px;
     height: 270px;
     width: 320px;
-    border-radius: 10px;
     background-color: rgb(195, 155, 221);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid red;
 }
 
+/* .card > img{
+    width: 100%;
+    height: 100%;
+} */
+
 .imagenPub{
-    height: 100px;
-    width: 100px;
+    height: 200px;
+    width: 275px;
+}
+
+.cont-info{
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+/*     justify-content: space-evenly */
 }
