--- a/inmobiliaria/src/components/header/header.css
+++ b/inmobiliaria/src/components/header/header.css
@@ -1,11 +1,15 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    }
-
-.cont-header{
-    background-color: aquamarine;
+header {
     width: 100%;
-    height: 200px;
+    height: auto;
+    background-color: aquamarine;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+
+.nav{
+    display: flex;
+    flex-direction: row;
+    background-color: blanchedalmond;
 }
