--- a/inmobiliaria/src/components/Registrer/registrationform.css
+++ b/inmobiliaria/src/components/Registrer/registrationform.css
@@ -1,13 +1,13 @@
 body{
     background: #bdc3c7; 
-    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  
+    background: linear-gradient(to right, #2c3e50, #bdc3c7);  
     background: linear-gradient(to right, #2c3e50, #bdc3c7); 
     
 }
 
 .form{
     background-color: white;
-    border-radius: 5px;
+    border-radius: 25px;
     width: 550px;
     margin: 20px auto;
     padding: 20px;
