--- a/inmobiliaria/src/components/Login/login.css
+++ b/inmobiliaria/src/components/Login/login.css
@@ -37,7 +37,7 @@ box-sizing: border-box;
     color: #94618B;
 }
 
-button{
+.button-login{
     width: 100%;
     height: 40px;
     background-color: #94618B;
@@ -46,7 +46,7 @@ button{
     margin-bottom: 16px;
 }
 
-button:hover{
+.button-login:hover{
     text-decoration: underline;
     cursor: pointer;
 }
@@ -64,6 +64,7 @@ button:hover{
 #registrate{
     font-size: 12px;
     color: #94618B;
+    padding-left: 5px;
 }
 
 .form-login a{
@@ -74,6 +75,7 @@ button:hover{
 
 .registrate{
     font-size: 12px;
+    
 }
 
 .form-login a:hover{
@@ -88,4 +90,5 @@ button:hover{
     height: 100vh;
     width: 100vw;
     background: linear-gradient(rgb(109, 97, 182), rgb(111, 53, 176));
+    flex-direction: column;
 }
