--- a/inmobiliaria/src/components/Registrer/registrationform.css
+++ b/inmobiliaria/src/components/Registrer/registrationform.css
@@ -1,7 +1,6 @@
 body{
     background: #bdc3c7; 
-    background: linear-gradient(to right, #2c3e50, #bdc3c7);  
-    background: linear-gradient(to right, #2c3e50, #bdc3c7); 
+    background: linear-gradient(rgb(94, 81, 175),rgb(122, 88, 162));
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -24,16 +23,7 @@ body{
 
 .form-body{
     text-align: left;
-    /* padding: 20px 10px; */
 }
-/* 
-.form-body > *{
-    padding: 5px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas: "";
-} */
 
 .form__label{
     width: 100%;
