--- a/inmobiliaria/src/components/Main/filter/filter.css
+++ b/inmobiliaria/src/components/Main/filter/filter.css
@@ -2,4 +2,24 @@
     width: 100%;
     height: 8vh;
     background-color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.boton-buscar{
+    background-color: brown;
+    width: 4vw;
+}
+
+.select-class{
+    width: 25%;
+    min-height:none;
+}
+
+.select{
+    height: 5vh;
+    width: 15vw;
+    border-radius: 5px;
 }
