--- a/inmobiliaria/src/components/Footer/footer.css
+++ b/inmobiliaria/src/components/Footer/footer.css
@@ -13,20 +13,14 @@ footer {
   bottom: 0px;
 }
 
-.img-logo{
+.img-logo-footer{
   width: 100px;
   height: 50px;
 }
 
-
-img {
-  width: 190px;
-  height: 90px;
-}
-
 .cont-links-logo-conocenos {
   width: 100%;
-  height: 100%;
+  height: 60%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -55,7 +49,7 @@ a {
   text-decoration: none;
 }
 
-li:hover {
+.list:hover {
   transform: scale(1.2);
   transition: transform 0.2s;
 }
@@ -87,14 +81,15 @@ svg:hover {
   transition: transform 0.2s;
 }
 
-hr {
-    border-top: 1px solid violet;
-  }
-
 .Copy-Right {
-  color: #212121;
-  height: 40px;
+  color: #ffffff;
+  height: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.copy-right-footer {
+  font-size: larger;
+  font-weight: 600;
 }
