--- a/inmobiliaria/src/components/Header/nav_list/NavList.css
+++ b/inmobiliaria/src/components/Header/nav_list/NavList.css
@@ -1,18 +1,18 @@
-ul {
+.nav-ul {
     width: 100%;
     display: flex;
     flex-direction: row;
     list-style: none;
 }
 
-li {
+.nav-li {
     margin: auto;
     color: #FFFFFF;
     font-size: 20px;
     cursor: pointer;
 }
 
-li:after {
+.nav-li:after {
     display: block;
     content: '';
     border-bottom: solid 2px #607D8B;
@@ -21,7 +21,7 @@ li:after {
     transition: transform 300ms ease-in-out;
 }
 
-li:hover:after {
+.nav-li:hover:after {
     transform: scaleX(1);
 
 }
