--- a/inmobiliaria/src/components/header/header.css
+++ b/inmobiliaria/src/components/header/header.css
@@ -36,7 +36,8 @@ header {
     justify-content: center;
   }
   
-  .image > img {
+    
+  .img-header {
     width: 190px;
     height: 90px;
   }
