--- a/inmobiliaria/src/error-page.css
+++ b/inmobiliaria/src/error-page.css
@@ -3,7 +3,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center
+    align-items: center;
+    margin: 20px;
 }
 
 .titulo-error{
