--- a/inmobiliaria/src/components/Main/cuadradito/Info_viviendas/info_viviendas.css
+++ b/inmobiliaria/src/components/Main/cuadradito/Info_viviendas/info_viviendas.css
@@ -10,6 +10,10 @@
   position: relative;
   width: 50%;
   height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 20px;
 }
 
 .info-precio-vivienda {
@@ -30,6 +34,10 @@
 .container_info_vivienda {
   width: 50%;
   height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
 
 .infoviviendas-ul > li {
@@ -38,18 +46,23 @@
 }
 
 .span-li {
+  color:rgb(255, 255, 255);
   font-weight: 400;
   letter-spacing: 0.5px;
+  text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
 
 .container_caracteristicas {
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: "Oswald";
+  border-radius: 10px;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3)
 }
-
 
 .infoviviendas-ul {
   color: #000000;
@@ -74,30 +87,16 @@
   height: auto;
   font-family: "Oswald";
   border-radius: 10px;
-    box-shadow:
-    inset 0 -3em 3em rgba(0,0,0,0.1),
-          0 0  0 2px rgb(255,255,255),
-          0.3em 0.3em 1em rgba(0,0,0,0.3);
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 
 .container_consultas_vivienda {
   width: 50%;
   height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.container-form {
-  width: 90%;
-  height: 60%;
-  border-radius: 10px;
-    box-shadow:
-    inset 0 -3em 3em rgba(0,0,0,0.1),
-          0 0  0 2px rgb(255,255,255),
-          0.3em 0.3em 1em rgba(0,0,0,0.3);
-  background-color: #726e6e;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  font-size: small;
-  font-family: "Oswald";
-}
+
