--- a/inmobiliaria/src/components/Main/filter/filter.css
+++ b/inmobiliaria/src/components/Main/filter/filter.css
@@ -1,25 +1,50 @@
-.cont-filter{
-    width: 100%;
-    height: 8vh;
-    background-color: aliceblue;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+.cont-filter {
+  width: 100%;
+  height: 8vh;
+  background: #49274a;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
-.boton-buscar{
-    background-color: brown;
-    width: 4vw;
+.button-buscar {
+    margin: 5px;
+    width: 7%;
+    height: 40%;
+    border-style: none;
+    border-radius: 50px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.349);
+    background-color: #607d8b;
+    cursor: pointer;
+    color: #ffffff;
+    font-size: large;
+    font-family: "Oswald";
+    letter-spacing: 2px;
+  }
+  
+  .button-buscar:hover {
+    transform: scale(0.9);
+    transition: transform 0.2s;
+    color: violet;
+  }
+
+.select-class {
+  width: 25%;
+  min-height: none;
 }
 
-.select-class{
-    width: 25%;
-    min-height:none;
+.select {
+  height: 5vh;
+  width: 15vw;
+  border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #94618b;
+  background: #ffffff;
+  font-size: large;
+  font-weight: bold;
+  color: #94618b;
 }
 
-.select{
-    height: 5vh;
-    width: 15vw;
-    border-radius: 5px;
-}
